modified:   base/templates/base/home new.html 	modified:   venv/Lib/site-packages/_distutils_hack/__pycache__/__init__.cpython-311.pyc

--- a/base/templates/base/home new.html
+++ b/base/templates/base/home new.html
@@ -491,7 +491,7 @@
         <article class="hero-banner">
             <section class="hero-text">
                 <h1 class="hero-title">Knowledge is Power</h1>
-                <p class="hero-body">Nunc porttitor leo eget iaculis egestas. Duis nec volutpat urna. Sed viverra nibh tortor, consectetur efficitur mi gravida vel. Aliquam id risus ipsum. Praesent non quam tempor, sagittis arcu nec, bibendum dui.</p>
+                <p class="hero-body">The good student always keeps learning. Whether you are here for a light read or to further your educational journey, The Good Student has something to offer for you.</p>
 
                 <hr class="break">
                 <div class="feature-article"><h2>Featured Articles</h2></div>
